--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
     "@mui/material": "^5.2.8",
+    "@mui/styled-engine-sc": "^5.1.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.4",
     "electron-updater": "^4.6.4",
@@ -237,7 +238,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "styled-components": "^5.3.3"
   },
   "devEngines": {
     "node": ">=14.x",
