--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "recharts": "^2.1.8",
     "regenerator-runtime": "^0.13.9",
     "styled-components": "^5.3.3"
   },
