--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:main": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./src/main/main.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "upgrade": "cross-env UPGRADE_EXTENSIONS=1 npm run start"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
